# sphereFit

./: 20240507-ZB60.csv  CMakeLists.txt  README.md  allCircleFit.cpp  allCircleFit.h  allSphereFit.cpp  allSphereFit.h  allTargetAllVerticalFit.cpp  allTargetAllVerticalFit.h  circleFit.cpp  circleFit.h  configration.cpp  configration.h  dataPrepare.cpp  dataPrepare.h  eccentricityAndInclination.cpp  eccentricityAndInclination.h  gaussNoise.h  hello_ceres.cpp  lineFit.cpp  lineFit.h  oneTargetAllVerticalFit.cpp  oneTargetAllVerticalFit.h  point.h  result_01.txt  result_en.txt  shapeFit.cpp  shapeFit.h  shapeFit_v3.kdev4  sphereAndCircleJoinedFit.h  sphereFit.cpp  sphereFit.h
data/: center_result.xlsx  result_AllTargetAllVerticalCircle.txt  result_allSphereFitted.txt  result_circleFitted.txt  result_oneTargetAllVerticalCircleFitted.txt  result_sphereFitted.txt  testData.csv  testdata.csv
